made many changes to my website home page while learning from a html and css course online, and while building the projects within the course including replicating a YouTube page

--- a/home.html
+++ b/home.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
-  <html>
+<html>
 
-    <head>
-      <title>
-        Darrell Dunn
-      </title>
+  <head>
+    <title>
+      Darrell Dunn
+    </title>
 
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
 
-      <link rel="stylesheet" href="styles/home.css">
-    </head>
+    <link rel="stylesheet" href="styles/home.css">
 
-    <body>
-      <p>
-        Darrell Dunn
+  </head>
+
+  <body>
+    <div class="navbar-container">
+      <div class="left-header-section">
+        <p>
+          Scope
+        </p>
+      </div>
+      <div class="middle-header-section">
+        <input class="search-bar" type="text" placeholder="Search">
+      </div>
+      <div class="right-header-section">
+        <button class="sign-in-button">
+          Sign In
+        </button>
+      </div>
+    </div>
+    <div>
+      <p class="home-title">
+        Your Daily Dose of Creative Inspiration
       </p>
-    </body>
+    </div>
+    <div>
+      <p class="home-intro">
+        Get exclusive access to the stories, processes, and insights from working
+        creatives at top agencies and successful studios. Real expereiences, proven
+        techniques, honest perspectives -delivered fresh every week.
+      </p>
+    </div>
+    <div class="latest-posts-button-container">
+      <button class="latest-posts-button">
+        Latest Post
+      </button>
+    </div>
+  </body>
 
-  </html>
+</html>
