added calburner folder with an index, styles and app files.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/google-search-bar.css">
+    <link rel="stylesheet" href="styles/main-body.css">
+
+
 
   </head>
 
   <body>
-    <div class="navbar-container">
+    <div class=" navbar-container">
       <div class="left-header-section">
         <p>
           Scope
@@ -47,6 +52,7 @@
       <button class="latest-posts-button">
         Latest Post
       </button>
+
     </div>
   </body>
 
