--- a/calburner/index.html
+++ b/calburner/index.html
@@ -130,7 +130,7 @@
       </footer>
     </main>
 
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 
 </html>
