--- a/calburner/index.html
+++ b/calburner/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daily Calorie Burner</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="/calburner/styles.css" />
   </head>
 
   <body>
@@ -104,10 +104,6 @@
           </select>
         </label>
 
-        <label class="stack">
-          Consumed calories (optional)
-          <input id="consumed" type="number" min="0" step="1" placeholder="e.g. 1850" />
-        </label>
 
         <div class="results">
           <div class="equation">
@@ -116,6 +112,10 @@
             <hr />
             <div class="eqRow"><span>Calorie target</span><strong id="targetOut">—</strong></div>
           </div>
+          <label class="stack">
+            Consumed calories (optional)
+            <input id="consumed" type="number" min="0" step="1" placeholder="e.g. 1850" />
+          </label>
 
           <div class="resultRow">
             <span>Remaining</span>
@@ -130,7 +130,7 @@
       </footer>
     </main>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="/calburner/app.js"></script>
   </body>
 
 </html>
