Changed Age from a static whole number to being derived from user's birthdate as a 2 deci float.

--- a/calburner/index.html
+++ b/calburner/index.html
@@ -27,8 +27,13 @@
           </label>
 
           <label>
+            Birthdate
+            <input type="date" id="birthdate" />
+          </label>
+
+          <label>
             Age
-            <input id="age" type="number" min="10" max="100" value="42" />
+            <input id="age" readonly />
           </label>
 
           <label>
